# kalkulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  kalkulator.kdev4
.github/workflows/: tests.yml
.kdev4/: kalkulator.kdev4
src/: CMakeLists.txt  main.cpp  table_control.h  workbook_document.h
src/model/: event_sink.h  not_implemented_error.h
src/model/lisp/: lisp_common_values.cpp  lisp_common_values.h  lisp_execution_context.cpp  lisp_execution_context.h  lisp_execution_context_abs.h  lisp_execution_context_addition.h  lisp_execution_context_and.h  lisp_execution_context_average.h  lisp_execution_context_ceil.h  lisp_execution_context_cons.h  lisp_execution_context_cos.h  lisp_execution_context_defun.h  lisp_execution_context_division.h  lisp_execution_context_eq.h  lisp_execution_context_error.h  lisp_execution_context_first.h  lisp_execution_context_floor.h  lisp_execution_context_funcall.h  lisp_execution_context_greater_than.h  lisp_execution_context_if.h  lisp_execution_context_isnone.h  lisp_execution_context_join.h  lisp_execution_context_lambda.h  lisp_execution_context_list.h  lisp_execution_context_log.h  lisp_execution_context_lower_than.h  lisp_execution_context_multiplication.h  lisp_execution_context_not.h  lisp_execution_context_or.h  lisp_execution_context_pow.h  lisp_execution_context_progn.h  lisp_execution_context_rest.h  lisp_execution_context_round.h  lisp_execution_context_set_var.h  lisp_execution_context_sin.h  lisp_execution_context_sqrt.h  lisp_execution_context_subtraction.h  lisp_execution_context_tan.h  lisp_execution_context_xor.h  lisp_executor.cpp  (+30 more)
src/model/table/: lisp_execution_context_average.h  lisp_execution_context_cell_range.h  lisp_execution_context_cell_reference.h  lisp_execution_context_message_box.h  table_cell.cpp  table_cell.h  table_cell_color.h  table_cell_comment.h  table_cell_format.h  table_cell_formula.cpp  table_cell_formula.h  table_cell_location.h  table_cell_orientation.h  table_cell_selection.h  table_change_history.h  table_column_definition.cpp  table_column_definition.h  table_row_definition.cpp  table_row_definition.h  table_search_result.h  table_selections.h  table_sheet.cpp  table_sheet.h  table_workbook_document.cpp  table_workbook_document.h  table_workbook_file.cpp  table_workbook_file.h  table_workbook_file_error.h  workbook_document.cpp  workbook_document.h
src/tests/: tests.cpp  tests.h
src/tests/lisp/: lisp_tests.cpp  lisp_tests.h  lisp_value_tests.cpp  lisp_value_tests.h
src/tests/table/: table_lisp_function_tests.cpp  table_lisp_function_tests.h
src/tools/: location.h  number_interpreter.h  rectangle.h  tools.cpp  tools.h
src/view/: cells_view_control.cpp  cells_view_control.h  event_sink.h  icons.h  input_text_control.cpp  input_text_control.h  kalkulator_main_frame.cpp  kalkulator_main_frame.h  kalkulator_system_colors.h  search_text_control.cpp  search_text_control.h  table_cell_format_dlg.cpp  table_cell_format_dlg.h  table_column_headers_control.cpp  table_column_headers_control.h  table_control.cpp  table_control.h  table_formula_text_control.cpp  table_formula_text_control.h  table_row_headers_control.cpp  table_row_headers_control.h  table_search_dlg.cpp  table_search_dlg.h  table_search_page.cpp  table_search_page.h  table_search_page_replace.cpp  table_search_page_replace.h  table_search_page_search.cpp  table_search_page_search.h  table_sheet_view.cpp  table_sheet_view.h
style/: .clang-format  style.xml
tests/: CMakeLists.txt  TestTheTest.cpp
tests/lib/googletest/: commit.txt
tests/lib/googletest/googletest/cmake/: internal_utils.cmake
tests/src/: TestTheTest.cpp  mock_function_context.h
tests/src/lisp/: lisp_abs_tests.cpp  lisp_addition_tests.cpp  lisp_and_tests.cpp  lisp_avg_tests.cpp  lisp_ceil_tests.cpp  lisp_cons_tests.cpp  lisp_cos_tests.cpp  lisp_defun_tests.cpp  lisp_division_tests.cpp  lisp_eq_tests.cpp  lisp_execution_tests.cpp  lisp_first_tests.cpp  lisp_floor_tests.cpp  lisp_greater_than_tests.cpp  lisp_if_tests.cpp  lisp_isnone_tests.cpp  lisp_join_tests.cpp  lisp_lambda_tests.cpp  lisp_list_tests.cpp  lisp_log_tests.cpp  lisp_lower_than_tests.cpp  lisp_multiplication_tests.cpp  lisp_not_tests.cpp  lisp_or_tests.cpp  lisp_parser_tests.cpp  lisp_pow_tests.cpp  lisp_progn_tests.cpp  lisp_rest_tests.cpp  lisp_round_tests.cpp  lisp_set_var_tests.cpp  lisp_sin_tests.cpp  lisp_sqrt_tests.cpp  lisp_subtraction_tests.cpp  lisp_tan_tests.cpp  lisp_test_tools.cpp  lisp_test_tools.h  lisp_value_tests.cpp  lisp_xeq_tests.cpp  lisp_xor_tests.cpp  test_function_execution_context.h
tests/src/table/: table_cell_range_tests.cpp  table_cell_reference_tests.cpp  table_cell_selection_tests.cpp  table_cell_tests.cpp  table_search_tests.cpp  table_test.h  table_test_tools.cpp  table_test_tools.h  table_tests.cpp  table_undo_redo_tests.cpp  test_event_sink.h
tests/src/tools/: location_tests.cpp  rectangle_tests.cpp
